fixes version mobile

--- a/src/boutique/boutique.css
+++ b/src/boutique/boutique.css
@@ -114,7 +114,7 @@
 .product-detail--container {
   padding: 10px 0 0 20px;
   flex: 1 0 auto;
-  max-width: 100%;
+  max-width: 700px;
   position: relative;
 }
 @media screen and (max-width: 700px) {
@@ -123,6 +123,7 @@
   }
   .product-detail--container {
     padding: 0;
+    max-width: 100%;
   }
 }
 .product-detail--prix {
