--- a/src/boutique/components/Panier/panier.css
+++ b/src/boutique/components/Panier/panier.css
@@ -105,5 +105,5 @@
 
 .cgv p {
   padding: 0.2em;
-  line-height: 0;
+  line-height: 1;
 }
